[dmu1_ml_ELAIS-N1] Add references to DMU0 products

--- a/dmu1/dmu1_ml_ELAIS-N1/master_catalogue_ELAIS-N1.ipynb
+++ b/dmu1/dmu1_ml_ELAIS-N1/master_catalogue_ELAIS-N1.ipynb
@@ -69,7 +69,7 @@
     "\n",
     "### I.a - Isaac Newton Telescope / Wide Field Camera (INT/WFC)\n",
     "\n",
-    "The catalogue was provided by Eduardo. The catalogue is described in [this paper](https://academic.oup.com/mnras/article/416/2/927/1055929/Wide-field-optical-imaging-on-ELAIS-N1-ELAIS-N2). The magnitudes are AB ones and are aperture corrected.\n",
+    "The catalogue was provided by Eduardo. The catalogue is described in [this paper](https://academic.oup.com/mnras/article/416/2/927/1055929/Wide-field-optical-imaging-on-ELAIS-N1-ELAIS-N2). The magnitudes are AB ones and are aperture corrected. It is stored in `dmu0_ELAIS-N1_INTWFC`.\n",
     "\n",
     "In the catalogue, we keep:\n",
     "\n",
@@ -186,7 +186,7 @@
    "source": [
     "### I.b - UKIRT Infrared Deep Sky Survey / Deep Extragalactic Survey (UKIDSS/DXS)\n",
     "\n",
-    "The catalogue was provided by Eduardo from an extraction made by Mattia. The catalogue is quite different from what can be extracted from the UKIDSS database (FIXME: Mattia to explain why). The descriptions of the columns of the DXS table in the UKIDSS database is available there: http://horus.roe.ac.uk/wsa/www/WSA_TABLE_dxsSourceSchema.html.\n",
+    "The catalogue was provided by Eduardo from an extraction made by Mattia. The catalogue is quite different from what can be extracted from the UKIDSS database (FIXME: Mattia to explain why). The descriptions of the columns of the DXS table in the UKIDSS database is available there: http://horus.roe.ac.uk/wsa/www/WSA_TABLE_dxsSourceSchema.html. It is stored in `dmu0_ELAIS-N1_DXS`.\n",
     "\n",
     "In the catalogue, we keep:\n",
     "\n",
