--- a/dmu1/dmu1_ml_ELAIS-N1/master_catalogue_ELAIS-N1.ipynb
+++ b/dmu1/dmu1_ml_ELAIS-N1/master_catalogue_ELAIS-N1.ipynb
@@ -69,7 +69,7 @@
     "\n",
     "### I.a - Isaac Newton Telescope / Wide Field Camera (INT/WFC)\n",
     "\n",
-    "The catalogue was provided by Eduardo. The catalogue is described in [this paper](https://academic.oup.com/mnras/article/416/2/927/1055929/Wide-field-optical-imaging-on-ELAIS-N1-ELAIS-N2). The magnitudes are AB ones and are aperture corrected. It is stored in `dmu0_ELAIS-N1_INTWFC`.\n",
+    "Isaac Newton Telescope / Wide Field Camera (INT/WFC) catalogue: the catalogue comes from `dmu0_INTWFC`.\n",
     "\n",
     "In the catalogue, we keep:\n",
     "\n",
