[dmu1_ml_ELAIS-N1] Create tables in the data directory

--- a/dmu1/dmu1_ml_ELAIS-N1/master_catalogue_ELAIS-N1.ipynb
+++ b/dmu1/dmu1_ml_ELAIS-N1/master_catalogue_ELAIS-N1.ipynb
@@ -1820,7 +1820,7 @@
    "source": [
     "cross_ident_table = masterlist_catalogue[\n",
     "    'help_id', 'wfc_id', 'dxs_id', 'servs_intid', 'swire_intid', 'sparcs_intid']\n",
-    "cross_ident_table.write(\"master_list_cross_ident_elais-n1.fits\", overwrite=True)"
+    "cross_ident_table.write(\"data/master_list_cross_ident_elais-n1.fits\")"
    ]
   },
   {
@@ -1861,7 +1861,7 @@
    },
    "outputs": [],
    "source": [
-    "masterlist_catalogue.write(\"master_catalogue_elais-n1.fits\", overwrite=True)"
+    "masterlist_catalogue.write(\"data/master_catalogue_elais-n1.fits\")"
    ]
   }
  ],
