[dmu1_ml_ELAIS-N1] Update notebooks to use DMU0 files

--- a/dmu1/dmu1_ml_ELAIS-N1/master_catalogue_ELAIS-N1.ipynb
+++ b/dmu1/dmu1_ml_ELAIS-N1/master_catalogue_ELAIS-N1.ipynb
@@ -90,7 +90,7 @@
    },
    "outputs": [],
    "source": [
-    "wfc = Table.read(\"data/en1_intwfc_v2.1_HELP_coverage.fits\")[\n",
+    "wfc = Table.read(\"../../dmu0/dmu0_INTWFC/data/en1_intwfc_v2.1_HELP_coverage.fits\")[\n",
     "    'id', 'ra', 'decl', 'pstar',     \n",
     "    'umag4', 'uemag4', 'ukronmag', 'uekronmag',\n",
     "    'gmag4', 'gemag4', 'gkronmag', 'gekronmag',\n",
@@ -220,7 +220,7 @@
     }
    ],
    "source": [
-    "dxs = Table.read(\"data/en1_ukidss_dr10plus_merged_HELP_coverage.fits\")[\n",
+    "dxs = Table.read(\"../../dmu0/dmu0_ELAIS-N1_DXS/data/en1_ukidss_dr10plus_merged_HELP_coverage.fits\")[\n",
     "    'sourceid', 'RA', 'Dec', 'PSTAR',     \n",
     "    'JAPERMAG3', 'JAPERMAG3ERR', 'JKRONMAG', 'JKRONMAGERR',\n",
     "    'HAPERMAG3', 'HAPERMAG3ERR', 'HKRONMAG', 'HKRONMAGERR',\n",
@@ -349,7 +349,7 @@
     }
    ],
    "source": [
-    "servs = Table.read(\"data/df-servs_elais-n1.fits\")[\n",
+    "servs = Table.read(\"../../dmu0/dmu0_DataFusion-Spitzer/data/DF-SERVS_ELAIS-N1.fits\")[\n",
     "    'internal_id', 'ra_12', 'dec_12',   \n",
     "    'flux_aper_2_1', 'fluxerr_aper_2_1', 'flux_auto_1', 'fluxerr_auto_1', 'class_star_1',\n",
     "    'flux_aper_2_2', 'fluxerr_aper_2_2', 'flux_auto_2', 'fluxerr_auto_2', 'class_star_2']\n",
@@ -476,7 +476,7 @@
     }
    ],
    "source": [
-    "swire = Table.read(\"data/df-swire_elais-n1.fits\")[\n",
+    "swire = Table.read(\"../../dmu0/dmu0_DataFusion-Spitzer/data/DF-SWIRE_ELAIS-N1.fits\")[\n",
     "    'internal_id', 'ra_spitzer', 'dec_spitzer',      \n",
     "    'flux_ap2_36', 'uncf_ap2_36', 'flux_kr_36', 'uncf_kr_36', 'stell_36',\n",
     "    'flux_ap2_45', 'uncf_ap2_45', 'flux_kr_45', 'uncf_kr_45', 'stell_45',\n",
@@ -659,7 +659,7 @@
     "\n",
     "sparcs_epoch = 2012\n",
     "\n",
-    "sparcs_tmp = Table.read(\"data/SpARCS_HELP_ELAIS-N1.fits\")[\n",
+    "sparcs_tmp = Table.read(\"../../dmu0/dmu0_SpARCS/data/SpARCS_HELP_ELAIS-N1.fits\")[\n",
     "    'internal_id', 'ALPHA_J2000', 'DELTA_J2000', 'CLASS_STAR',      \n",
     "    'MAG_APER_r', 'MAGERR_APER_r', 'MAG_AUTO_r', 'MAGERR_AUTO_r',\n",
     "    'MAG_APER_u', 'MAGERR_APER_u', 'MAG_AUTO_u', 'MAGERR_AUTO_u',\n",
@@ -1025,7 +1025,7 @@
    },
    "outputs": [],
    "source": [
-    "gaia = Table.read(\"data/gaia_elais-n1.fits\")\n",
+    "gaia = Table.read(\"../../dmu0/dmu0_GAIA/data/GAIA_ELAIS-N1.fits\")\n",
     "gaia_coords = SkyCoord(gaia['ra'], gaia['dec'])"
    ]
   },
