--- a/dmu1/dmu1_ml_ELAIS-N1/sparcs_aperture_correction.ipynb
+++ b/dmu1/dmu1_ml_ELAIS-N1/sparcs_aperture_correction.ipynb
@@ -63,7 +63,7 @@
     }
    ],
    "source": [
-    "t = Table.read(\"data/SpARCS_HELP_ELAIS-N1.fits\")\n",
+    "t = Table.read(\"../../dmu0/dmu0_SpARCS/data/SpARCS_HELP_ELAIS-N1.fits\")\n",
     "stellarity = t['CLASS_STAR']\n",
     "\n",
     "mags_r = np.array(t['MAG_APER_r']).T\n",
