[dmu1_ml_ELAIS-N1] Add catalogue summary table

--- a/dmu1/dmu1_ml_ELAIS-N1/master_catalogue_ELAIS-N1.ipynb
+++ b/dmu1/dmu1_ml_ELAIS-N1/master_catalogue_ELAIS-N1.ipynb
@@ -6,7 +6,15 @@
    "source": [
     "# HELP - ELAIS-N1 Master List Creation\n",
     "\n",
-    "This notebook presents the creation of the HELP master list on the ELAIS-N1 field."
+    "This notebook presents the creation of the HELP master catalogue on the ELAIS-N1 field.  The following table summarises the list of used catalogues.\n",
+    "\n",
+    "| Survey     | Telescope / Instrument                     |      Filters (detection band in bold)      |\n",
+    "|------------|--------------------------------------------|:------------------------------------------:|\n",
+    "| INT/WFC    | Isaac Newton Telescope / Wide Field Camera | **u**, **g**, **r**, **i**, **z**          |\n",
+    "| UKIDSS/DXS | UK Infrared Telescope / WFCAM              | **J**, **H**, **K**                        |\n",
+    "| SERVS      | Spitzer / IRAC                             | **IRAC1**, **IRAC2**                       |\n",
+    "| SWIRE      | Spitzer / IRAC                             | **IRAC1**, **IRAC2**, **IRAC3**, **IRAC3** |\n",
+    "| SpARCS     | CFHT / MegaCam                             | u, g, **r**, z                             |"
    ]
   },
   {
