Changes to ES1 based on Data planning updates

--- a/dmu1/dmu1_ml_ELAIS-N2/master_catalogue_ELAIS-N2.ipynb
+++ b/dmu1/dmu1_ml_ELAIS-N2/master_catalogue_ELAIS-N2.ipynb
@@ -1089,7 +1089,9 @@
     "editable": true
    },
    "source": [
-    "## V- Merging the catalogues"
+    "## V- Merging the catalogues\n",
+    "\n",
+    "Mattia suggests changing the order to wfc - sparcs - swire. Perhaps the astrometry corrections could be used to inform the order? "
    ]
   },
   {
