--- a/dmu1/dmu1_ml_ELAIS-S1/master_catalogue_ELAIS-S1.ipynb
+++ b/dmu1/dmu1_ml_ELAIS-S1/master_catalogue_ELAIS-S1.ipynb
@@ -6,7 +6,46 @@
    "source": [
     "# HELP - ELAIS-S1 Master List Creation\n",
     "\n",
-    "This notebook presents the creation of the HELP master list on the ELAIS-S1 field."
+    "This notebook presents the creation of the HELP master list on the ELAIS-S1 field. Details of this and all fields/surveys taken from https://docs.google.com/spreadsheets/d/1b1rs4bn2ND4mrWA99yWfkt7ImyFJ9s7OX8fambYKnLE/edit#gid=0\n",
+    "\n",
+    "<table>\n",
+    "  <tr>\n",
+    "    <th>Survey/Telescope/Instrument</th>\n",
+    "    <th>Filters</th>\n",
+    "    <th>Location</th>\n",
+    "    <th>Notes</th>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td>VIDEO\tVISTA\tVIRCAM\t\t</td>\n",
+    "    <td>Z,Y,J,H,K</td>\n",
+    "    <td>dmu0_VISTA-VIDEO</td>\n",
+    "    <td></td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td>SWIRE/Spitzer/IRAC & MIPS</td>\n",
+    "    <td>IRAC1234 & MIPS123</td>\n",
+    "    <td>dmu0_DataFusion-Spitzer</td>\n",
+    "    <td></td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td>SERVS/Spitzer/IRAC\t\t</td>\n",
+    "    <td>IRAC12</td>\n",
+    "    <td>dmu0_DataFusion-Spitzer</td>\n",
+    "    <td></td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td>ESIS/ESO 2.2/WFI</td>\n",
+    "    <td>BVR</td>\n",
+    "    <td>dmu0_ESIS-VOICE</td>\n",
+    "    <td></td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td>DES-DEEP/Blanco/DECAM</td>\n",
+    "    <td>grizy</td>\n",
+    "    <td></td>\n",
+    "    <td>Awaiting release...</td>\n",
+    "  </tr>\n",
+    "</table>\n"
    ]
   },
   {
