--- a/dmu1/dmu1_ml_XMM-LSS/master_catalogue_XMM-LSS.ipynb
+++ b/dmu1/dmu1_ml_XMM-LSS/master_catalogue_XMM-LSS.ipynb
@@ -53,7 +53,7 @@
     "  </tr>\n",
     "  <tr>\n",
     "    <td>HSC SSC PDR1/Subaru/HSC</td>\n",
-    "    <td>???</td>\n",
+    "    <td>griYz + narrowband?</td>\n",
     "    <td></td>\n",
     "    <td></td>\n",
     "  </tr>\n",
