more changes to ELAIS-S1 column headings

--- a/dmu1/dmu1_ml_ELAIS-S1/master_catalogue_ELAIS-S1.ipynb
+++ b/dmu1/dmu1_ml_ELAIS-S1/master_catalogue_ELAIS-S1.ipynb
@@ -22,9 +22,9 @@
     "    <td></td>\n",
     "  </tr>\n",
     "  <tr>\n",
-    "    <td>SWIRE/Spitzer/IRAC & MIPS</td>\n",
-    "    <td>IRAC1234 & MIPS123</td>\n",
-    "    <td>dmu0_DataFusion-Spitzer</td>\n",
+    "    <td>ESIS/ESO 2.2/WFI</td>\n",
+    "    <td>BVR</td>\n",
+    "    <td>dmu0_ESIS-VOICE</td>\n",
     "    <td></td>\n",
     "  </tr>\n",
     "  <tr>\n",
@@ -34,9 +34,9 @@
     "    <td></td>\n",
     "  </tr>\n",
     "  <tr>\n",
-    "    <td>ESIS/ESO 2.2/WFI</td>\n",
-    "    <td>BVR</td>\n",
-    "    <td>dmu0_ESIS-VOICE</td>\n",
+    "    <td>SWIRE/Spitzer/IRAC & MIPS</td>\n",
+    "    <td>IRAC1234 & MIPS123</td>\n",
+    "    <td>dmu0_DataFusion-Spitzer</td>\n",
     "    <td></td>\n",
     "  </tr>\n",
     "  <tr>\n",
@@ -173,6 +173,7 @@
    "outputs": [],
    "source": [
     "#Both flux and mag available in pristine catalogues\n",
+    "#I think these are still 2 arcsec aperture phtometriers and need to be replaceed with 3 arcsec.\n",
     "video = Table.read(\"../../dmu0/dmu0_VISTA-VIDEO-private/data/VIDEO-all_2016-04-14_fullcat_errfix_ELAIS-S1.fits\")[\n",
     "    'ID', 'ALPHA_J2000', 'DELTA_J2000', 'PSTAR',     \n",
     "    'Z_MAG_APER_3', 'Z_MAGERR_APER_3', 'Z_MAG_AUTO', 'Z_MAGERR_AUTO',\n",
@@ -281,9 +282,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### I.b - VST telescope/OmegaCAM camera/VOICE survey\n",
+    "### I.b - ESO 2.2 (VST?) telescope/WFI camera/ESIS survey\n",
     "\n",
-    "According to Mattia's website (http://www.mattiavaccari.net/voice/) the survey has ugri band data.\n",
+    "According to Mattia's website (http://www.mattiavaccari.net/voice/) the survey was originally going to be called VOICE but has changed and is now called ESIS for ELAIS S1 and only VOICE for CDFS. This is based on our working spreadheet linked at the top.\n",
     "\n",
     "In the catalogue, we keep:\n",
     "\n",
@@ -317,38 +318,43 @@
     }
    ],
    "source": [
-    "voice = Table.read(\"../../dmu0/dmu0_VST-VOICE/data/es1_voice.fits\")[\n",
-    "    'sourceid', 'RA', 'Dec', 'PSTAR',     \n",
-    "    'JAPERMAG3', 'JAPERMAG3ERR', 'JKRONMAG', 'JKRONMAGERR',\n",
-    "    'HAPERMAG3', 'HAPERMAG3ERR', 'HKRONMAG', 'HKRONMAGERR',\n",
-    "    'KAPERMAG3', 'KAPERMAG3ERR', 'KKRONMAG', 'KKRONMAGERR']\n",
-    "voice = Table(dxs.as_array(), names=[\n",
+    "#Aperture 6 is 3 arcsec, Aperture 4 is 2 arcsec. We are now using 3 arcsec!\n",
+    "#There appear to be four bands in the catalogue not three BVR. Is it not ugri?\n",
+    "voice = Table.read(\"../../dmu0/dmu0_ESIS-VOICE/data/esis_b2vr_cat_03_HELP-coverage.fits\")[\n",
+    "    'ID', 'ALPHA_J2000', 'DELTA_J2000', 'CLASS_STAR_1',     \n",
+    "    'MAG_APER_6_1', 'MAGERR_APER_6_1', 'MAG_AUTO_1', 'MAGERR_AUTO_1',\n",
+    "    'MAG_APER_6_2', 'MAGERR_APER_6_2', 'MAG_AUTO_2', 'MAGERR_AUTO_2',\n",
+    "    'MAG_APER_6_3', 'MAGERR_APER_6_3', 'MAG_AUTO_3', 'MAGERR_AUTO_3',\n",
+    "    'MAG_APER_6_4', 'MAGERR_APER_6_4', 'MAG_AUTO_4', 'MAGERR_AUTO_4']\n",
+    "voice = Table(video.as_array(), names=[\n",
     "    'voice_id', 'voice_ra', 'voice_dec', 'voice_stellarity',\n",
-    "    'm_app_voice_u', 'merr_app_ukidss_u', 'm_ukidss_u', 'merr_ukidss_u',\n",
-    "    'm_app_voice_g', 'merr_app_ukidss_g', 'm_ukidss_g', 'merr_ukidss_g',\n",
-    "    'm_app_voice_r', 'merr_app_ukidss_r', 'm_ukidss_r', 'merr_ukidss_r',\n",
-    "    'm_app_voice_i', 'merr_app_ukidss_i', 'm_ukidss_i', 'merr_ukidss_i'\n",
+    "    'm_app_voice_u', 'merr_app_voice_u', 'm_voice_u', 'merr_voice_u',\n",
+    "    'm_app_voice_g', 'merr_app_voice_g', 'm_voice_g', 'merr_voice_g',\n",
+    "    'm_app_voice_r', 'merr_app_voice_r', 'm_voice_r', 'merr_voice_r',\n",
+    "    'm_app_voice_i', 'merr_app_voice_i', 'm_voice_i', 'merr_voice_i'\n",
     "])\n",
-    "voice_epoch = 2008 ???\n",
-    "voice_moc = MOC(filename=\"../../dmu0/dmu0_ELAIS-N1_DXS/data/???.fits\")\n",
+    "voice_epoch = 2016 #TODO: Check this\n",
+    "#MOC made using 'stilts pixfoot in=esis_b2vr_cat_03_HELP-coverage.fits \n",
+    "#order=13 mocfmt=fits ra=ALPHA_J2000 dec=DELTA_J2000 out=esis_elais-s1-MOC-o13.fits'\n",
+    "voice_moc = MOC(filename=\"../../dmu0/dmu0_ESIS-VOICE/data/esis_elais-s1-MOC-o13.fits\")\n",
     "\n",
     "# Adding flux and band-flag columns\n",
-    "for col in dxs.colnames:\n",
+    "for col in voice.colnames:\n",
     "    if col.startswith('m_'):\n",
     "        errcol = \"merr{}\".format(col[1:])\n",
     "        \n",
-    "        # DXS uses a huge negative number for missing values\n",
-    "        dxs[col][dxs[col] < -100] = np.nan\n",
-    "        dxs[errcol][dxs[errcol] < -100] = np.nan\n",
+    "        # voice uses 99. for missing values\n",
+    "        voice[col][voice[col] = 99.] = np.nan\n",
+    "        voice[errcol][voice[errcol] = 99.] = np.nan\n",
     "        \n",
-    "        flux, error = utils.mag_to_flux(np.array(dxs[col]), np.array(dxs[errcol]))\n",
+    "        flux, error = utils.mag_to_flux(np.array(voice[col]), np.array(voice[errcol]))\n",
     "\n",
     "        # Fluxes are added in µJy\n",
-    "        dxs.add_column(Column(flux * 1.e6, name=\"f{}\".format(col[1:])))\n",
-    "        dxs.add_column(Column(error * 1.e6, name=\"f{}\".format(errcol[1:])))\n",
+    "        voice.add_column(Column(flux * 1.e6, name=\"f{}\".format(col[1:])))\n",
+    "        voice.add_column(Column(error * 1.e6, name=\"f{}\".format(errcol[1:])))\n",
     "        \n",
     "        # Band-flag column\n",
-    "        dxs.add_column(Column(np.zeros(len(dxs), dtype=bool), name=\"flag{}\".format(col[1:])))\n",
+    "        voice.add_column(Column(np.zeros(len(voice), dtype=bool), name=\"flag{}\".format(col[1:])))\n",
     "        \n",
     "# TODO: Set to True the flag columns for fluxes that should not be used for SED fitting.        \n",
     "        "
@@ -407,7 +413,7 @@
     }
    ],
    "source": [
-    "dxs[:10].show_in_notebook()"
+    "voice[:10].show_in_notebook()"
    ]
   },
   {
