Changes to Lockman-SWIRE notebook

--- a/dmu1/dmu1_ml_Lockman-SWIRE/master_catalogue_Lockman-SWIRE.ipynb
+++ b/dmu1/dmu1_ml_Lockman-SWIRE/master_catalogue_Lockman-SWIRE.ipynb
@@ -256,7 +256,7 @@
    },
    "outputs": [],
    "source": [
-    "dxs = Table.read(\"../../dmu0/dmu0_ELAIS-N1_DXS/data/en1_ukidss_dr10plus_merged_HELP_coverage.fits\")[\n",
+    "dxs = Table.read(\"../../dmu0/dmu0_UKIDSS_DXS/data/UKIDSS-DXS_Lockman-SWIRE.fits\")[\n",
     "    'sourceid', 'RA', 'Dec', 'PSTAR',     \n",
     "    'JAPERMAG3', 'JAPERMAG3ERR', 'JKRONMAG', 'JKRONMAGERR',\n",
     "    'HAPERMAG3', 'HAPERMAG3ERR', 'HKRONMAG', 'HKRONMAGERR',\n",
@@ -268,7 +268,7 @@
     "    'm_app_ukidss_k', 'merr_app_ukidss_k', 'm_ukidss_k', 'merr_ukidss_k'\n",
     "])\n",
     "dxs_epoch = 2008\n",
-    "dxs_moc = MOC(filename=\"../../dmu0/dmu0_ELAIS-N1_DXS/data/en1_ukidss_dr10plus_merged_HELP_coverage_MOC.fits\")\n",
+    "dxs_moc = MOC(filename=\"../../dmu0/dmu0_UKIDSS_DXS/data/UKIDSS-DXS_Lockman-SWIRE_MOC.fits\")\n",
     "\n",
     "# Adding flux and band-flag columns\n",
     "for col in dxs.colnames:\n",
@@ -332,7 +332,7 @@
    },
    "outputs": [],
    "source": [
-    "servs = Table.read(\"../../dmu0/dmu0_DataFusion-Spitzer/data/DF-SERVS_ELAIS-N1.fits\")[\n",
+    "servs = Table.read(\"../../dmu0/dmu0_DataFusion-Spitzer/data/DF-SERVS_Lockman-SWIRE.fits\")[\n",
     "    'internal_id', 'ra_12', 'dec_12',   \n",
     "    'flux_aper_2_1', 'fluxerr_aper_2_1', 'flux_auto_1', 'fluxerr_auto_1', 'class_star_1',\n",
     "    'flux_aper_2_2', 'fluxerr_aper_2_2', 'flux_auto_2', 'fluxerr_auto_2', 'class_star_2']\n",
@@ -343,7 +343,7 @@
     "    'f_app_servs_irac2', 'ferr_app_servs_irac2', 'f_servs_irac2', 'ferr_servs_irac2', 'servs_stellarity_irac2'\n",
     "])\n",
     "servs_epoch = 2009\n",
-    "servs_moc = MOC(filename=\"../../dmu0/dmu0_DataFusion-Spitzer/data/DF-SERVS_ELAIS-N1_MOC.fits\")\n",
+    "servs_moc = MOC(filename=\"../../dmu0/dmu0_DataFusion-Spitzer/data/DF-SERVS_Lockman-SWIRE_MOC.fits\")\n",
     "\n",
     "# Adding magnitude and band-flag columns\n",
     "for col in servs.colnames:\n",
@@ -639,8 +639,9 @@
    "outputs": [],
    "source": [
     "#TODO - Everything!\n",
+    "#Use i band radec because seems to be widely regarded as good\n",
     "panstarrs = Table.read(\"../../dmu0/dmu0_PanSTARRS1-3SS/data/PanSTARRS1-3SS_Lockman-SWIRE.fits\")[\n",
-    "    'internal_id', 'ra_12', 'dec_12',   \n",
+    "    'uniquePspsSTid', 'ira', 'idec',   \n",
     "    'flux_aper_2_1', 'fluxerr_aper_2_1', 'flux_auto_1', 'fluxerr_auto_1', 'class_star_1',\n",
     "    'flux_aper_2_2', 'fluxerr_aper_2_2', 'flux_auto_2', 'fluxerr_auto_2', 'class_star_2']\n",
     "\n",
