First work on CDFS-SWIRE - alot of dmu0 missing

--- a/dmu1/dmu1_ml_ELAIS-S1/master_catalogue_ELAIS-S1.ipynb
+++ b/dmu1/dmu1_ml_ELAIS-S1/master_catalogue_ELAIS-S1.ipynb
@@ -1682,14 +1682,15 @@
     "    ~np.isnan(masterlist_catalogue['f_video_y'].filled()) |\n",
     "    ~np.isnan(masterlist_catalogue['f_video_j'].filled()) |\n",
     "    ~np.isnan(masterlist_catalogue['f_video_h'].filled()) |\n",
-    "    ~np.isnan(masterlist_catalogue['f_video_k'].filled()) |\n",
     "    ~np.isnan(masterlist_catalogue['f_voice_b99'].filled()) |\n",
     "    ~np.isnan(masterlist_catalogue['f_voice_b123'].filled()) |\n",
     "    ~np.isnan(masterlist_catalogue['f_voice_v'].filled()) |\n",
     "    ~np.isnan(masterlist_catalogue['f_voice_r'].filled())\n",
     ")\n",
     "\n",
-    "has_nir_flux = np.zeros(len(masterlist_catalogue), dtype=bool)\n",
+    "has_nir_flux = (|\n",
+    "    ~np.isnan(masterlist_catalogue['f_video_k'].filled()\n",
+    ")#np.zeros(len(masterlist_catalogue), dtype=bool))\n",
     "\n",
     "has_mir_flux = (\n",
     "    ~np.isnan(masterlist_catalogue['f_servs_irac1'].filled()) |\n",
