added basic dmu4 star mask script now working in ds9 format

--- a/dmu1/dmu1_ml_CDFS-SWIRE/master_catalogue_CDFS-SWIRE.ipynb
+++ b/dmu1/dmu1_ml_CDFS-SWIRE/master_catalogue_CDFS-SWIRE.ipynb
@@ -11,16 +11,16 @@
     "| Survey    | Telescope / Instrument      |      Filters (detection band in bold)      | Location                    |\n",
     "|-----------|-----------------------------|:------------------------------------------:|-----------------------------|\n",
     "| VIDEO     | VISTA/VIRCAM                | **u**,**g**,**r**,**i**,**z** |dmu0_VISTA-VIDEO, dmu0_VISTA-VIDEO-private|\n",
-    "| SWIRE     | Spitzer / IRAC              | **IRAC1**,**IRAC2**,**IRAC3**,**IRAC3**    | dmu0_DataFusion-Spitzer     |\n",
+    "| SWIRE     | Spitzer / IRAC              | **IRAC1**,**IRAC2**,**IRAC3**,**IRAC4**    | dmu0_DataFusion-Spitzer     |\n",
     "| SERVS     | Spitzer / IRAC              | **IRAC1**, **IRAC2**                       | dmu0_DataFusion-Spitzer     |\n",
     "| PS1 3PSS  | Pan-STARRS1 / Pan-STARRS1   | grizy                                      | dmu0_PanSTARRS1-3SS         |\n",
     "| PS1 MDS\t| Pan-STARRS1 / Pan-STARRS1   |\tgrizy                                      | ...awaiting release         |\n",
-    "| VOICE\t    | VST/OmegaCAM\t              | u,g,r,i                                    |                             |\n",
-    "| CTIO/CDFS | CTIO/MOSAIC\t              | g,r,i                                      |                             |\n",
+    "| VOICE\t    | VST/OmegaCAM\t              | u,g,r,i                                    | ...waiting for Mattia       |\n",
+    "| CTIO/CDFS | CTIO/MOSAIC\t              | g,r,i                                      | ...waiting for Mattia       |\n",
     "| DES-DEEP\t| Blanco/DECAM\t              | grizy                                      | ...awaiting release         |\n",
-    "| Fireworks\t| HST\tACS\t                  |                                            | dmu0_Fireworks              |\n",
+    "| Fireworks\t| HST\tACS\t                  | U38, B435, B, V, V606, R, i775, I, z850, J, H, **Ks**, IRAC1, IRAC2, IRAC3, IRAC4   | dmu0_Fireworks              |\n",
     "| COMBO-17\t| ESO/MPG \t/WFI\t          |                                            | dmu0_COMBO-17               |\n",
-    "| GOODS\t    | Spitzer\t\t              |                                            |                             |\n"
+    "| GOODS\t    | Spitzer\t\t              |                                            | ...unknown status           |\n"
    ]
   },
   {
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -58,7 +58,7 @@
     "from pymoc import MOC\n",
     "from matplotlib_venn import venn3\n",
     "\n",
-    "from herschelhelp_internal import flagging, utils, masterlist"
+    "from herschelhelp_internal import flagging, utils, masterlist, starmask"
    ]
   },
   {
@@ -360,7 +360,49 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#Use r band radec because readme states that is only band with radec for every source\n",
+    "#Can not find stallarity - perhaps this is a flag id?\n",
+    "panstarrs = Table.read(\"../../dmu0/dmu0_PanSTARRS1-3SS/data/PanSTARRS1-3SS_CDFS-SWIRE.fits\")[\n",
+    "    'uniquePspsSTid', 'rra', 'rdec',   \n",
+    "    'gApMag', 'gApMagErr', 'gKronMag', 'gKronMagErr', \n",
+    "    'rApMag', 'rApMagErr', 'rKronMag', 'rKronMagErr',\n",
+    "    'iApMag', 'iApMagErr', 'iKronMag', 'iKronMagErr',\n",
+    "    'zApMag', 'zApMagErr', 'zKronMag', 'zKronMagErr',\n",
+    "    'yApMag', 'yApMagErr', 'yKronMag', 'yKronMagErr']\n",
+    "\n",
+    "panstarrs = Table(panstarrs.as_array(), names=[\n",
+    "    'panstarrs_intid', 'panstarrs_ra', 'panstarrs_dec',\n",
+    "    'm_app_panstarrs_g', 'merr_app_panstarrs_g', 'm_panstarrs_g', 'merr_panstarrs_g', \n",
+    "    'm_app_panstarrs_r', 'merr_app_panstarrs_r', 'm_panstarrs_r', 'merr_panstarrs_r', \n",
+    "    'm_app_panstarrs_i', 'merr_app_panstarrs_i', 'm_panstarrs_i', 'merr_panstarrs_i', \n",
+    "    'm_app_panstarrs_z', 'merr_app_panstarrs_z', 'm_panstarrs_z', 'merr_panstarrs_z', \n",
+    "    'm_app_panstarrs_y', 'merr_app_panstarrs_y', 'm_panstarrs_y', 'merr_panstarrs_y'\n",
+    "])\n",
+    "panstarrs_epoch = 2009 #table says e.g. 55962.33945\n",
+    "panstarrs_moc = MOC(filename=\"../../dmu0/dmu0_PanSTARRS1-3SS/data/PanSTARRS1-3SS_CDFS-SWIRE_MOC.fits\")\n",
+    "\n",
+    "# Replace values with -999. with NaN\n",
+    "#panstarrs[panstarrs == -999.] = np.nan #fancy numpy doesn't work\n",
+    "for col in panstarrs.colnames:\n",
+    "    if col.startswith('m'): # | col.endswith('ra') | col.endswith('dec'):\n",
+    "        panstarrs[col][np.where(panstarrs[col] == -999.)] = np.nan\n",
+    "\n",
+    "# Adding flux and band-flag columns\n",
+    "for col in panstarrs.colnames:\n",
+    "    if col.startswith('m_'):\n",
+    "        \n",
+    "        errcol = \"merr{}\".format(col[1:])\n",
+    "        flux, error = utils.mag_to_flux(np.array(panstarrs[col]), np.array(panstarrs[errcol]))\n",
+    "\n",
+    "        # Fluxes are added in µJy\n",
+    "        panstarrs.add_column(Column(flux * 1.e6, name=\"f{}\".format(col[1:])))\n",
+    "        panstarrs.add_column(Column(error * 1.e6, name=\"f{}\".format(errcol[1:])))\n",
+    "        \n",
+    "        # Band-flag column\n",
+    "        panstarrs.add_column(Column(np.zeros(len(panstarrs), dtype=bool), name=\"flag{}\".format(col[1:])))\n",
+    "        "
+   ]
   },
   {
    "cell_type": "code",
@@ -387,7 +429,57 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#Based on PanSTARRS\n",
+    "fireworks = Table.read(\"../../dmu0/dmu0_Fireworks/data/fireworks.fits\")[\n",
+    "    'seq', 'RAJ2000', 'DEJ2000',   \n",
+    "    'FU38', 'e_FU38', \n",
+    "    'FB435', 'e_FB435', \n",
+    "    'FB', 'e_FB',\n",
+    "    'FV', 'e_FV',\n",
+    "    'FV606', 'e_FV606',\n",
+    "    'FRc', 'e_FRc',\n",
+    "    'Fi775', 'e_Fi775',\n",
+    "    'FI', 'e_FI',\n",
+    "    'Fz850', 'e_Fz850',\n",
+    "    'FJ', 'e_FJ',\n",
+    "    'FH', 'e_FH',\n",
+    "    'FKs', 'e_FKs',\n",
+    "    'F3.6', 'e_F3.6',\n",
+    "    'F4.5', 'e_F4.5',\n",
+    "    'F5.8', 'e_F5.8',\n",
+    "    'F8.0', 'e_F8.0',\n",
+    "    'FKs.t', 'e_FKs.t',\n",
+    "    'F24.t', 'e_F24.t'\n",
+    "    ]\n",
+    "\n",
+    "#Are these aperture magnitudes - in the readme only Ks band fluxes have an associated apperture\n",
+    "fireworks = Table(fireworks.as_array(), names=[\n",
+    "    'fireworks_intid', 'fireworks_ra', 'fireworks_dec',\n",
+    "    'm_fireworks_FU38',  'merr_fireworks_FU38', \n",
+    "    'm_fireworks_FB435', 'merr_fireworks_FB435', \n",
+    "    'm_fireworks_FB',    'merr_fireworks_FB',\n",
+    "    'm_fireworks_FV',    'merr_fireworks_FV',\n",
+    "    'm_fireworks_FV606', 'merr_fireworks_FV606',\n",
+    "    'm_fireworks_FRc',   'merr_fireworks_FRc',\n",
+    "    'm_fireworks_Fi775', 'merr_fireworks_Fi775',\n",
+    "    'm_fireworks_FI',    'merr_fireworks_FI',\n",
+    "    'm_fireworks_Fz850', 'merr_fireworks_Fz850',\n",
+    "    'm_fireworks_FJ',    'merr_fireworks_FJ',\n",
+    "    'm_fireworks_FH',    'merr_fireworks_FH',\n",
+    "    'm_fireworks_FKs',   'merr_fireworks_FKs',\n",
+    "    'm_fireworks_F3.6',  'merr_fireworks_F3.6',\n",
+    "    'm_fireworks_F4.5',  'merr_fireworks_F4.5',\n",
+    "    'm_fireworks_F5.8',  'merr_fireworks_F5.8',\n",
+    "    'm_fireworks_F8.0',  'merr_fireworks_F8.0',\n",
+    "    'm_fireworks_FKs.t', 'merr_fireworks_FKs.t',\n",
+    "    'm_fireworks_F24.t', 'merr_fireworks_F24.t'\n",
+    "])\n",
+    "fireworks_epoch = 2008 #Paper is from 2008 - Input surveys will have individual epochs\n",
+    "fireworks_moc = MOC(filename=\"../../dmu0/dmu0_Fireworks/data/fireworks_MOC.fits\")\n",
+    "\n",
+    "#Add flux and aperture magnitudes"
+   ]
   },
   {
    "cell_type": "code",
@@ -414,7 +506,42 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#Based on PanSTARRS\n",
+    "combo = Table.read(\"../../dmu0/dmu0_COMBO-17/data/table3.fits\")[\n",
+    "    'seq', 'ra', 'dec',  'stellarity',\n",
+    "    'Rmag',    'e_Rmag',  \n",
+    "    'UjMag',   'e_UjMag', \n",
+    "    'BjMag',   'e_BjMag',\n",
+    "    'VjMag',   'e_VjMag',\n",
+    "    'usMag',   'e_usMag',\n",
+    "    'gsMag',   'e_gsMag',\n",
+    "    'rsMag',   'e_rsMag',\n",
+    "    'UbMag',   'e_UbMag',\n",
+    "    'BbMag',   'e_BbMag',\n",
+    "    'VbMag',   'e_VbMag',\n",
+    "    'S280Mag', 'e_S280Mag',\n",
+    "    'S145Mag', 'e_S145Mag'\n",
+    "]\n",
+    "\n",
+    "combo = Table(fireworks.as_array(), names=[\n",
+    "    'combo_intid', 'combo_ra', 'combo_dec',\n",
+    "    'm_fireworks_R',    'e_Rmag',  \n",
+    "    'm_fireworks_Uj',   'e_Uj', \n",
+    "    'm_fireworks_Bj',   'e_Bj',\n",
+    "    'm_fireworks_Vj',   'e_Vj',\n",
+    "    'm_fireworks_us',   'e_us',\n",
+    "    'm_fireworks_gs',   'e_gs',\n",
+    "    'm_fireworks_rs',   'e_rs',\n",
+    "    'm_fireworks_Ub',   'e_Ub',\n",
+    "    'm_fireworks_Bb',   'e_Bb',\n",
+    "    'm_fireworks_Vb',   'e_Vb',\n",
+    "    'm_fireworks_S280', 'e_S280',\n",
+    "    'm_fireworks_S145', 'e_S145'\n",
+    "])\n",
+    "combo_epoch = 2009 #table says e.g. 55962.33945\n",
+    "combo_moc = MOC(filename=\"../../dmu0/dmu0_COMBO-17/data/table3_MOC.fits\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -820,6 +947,15 @@
    "source": [
     "## IV - Flagging objects near bright stars"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1667,7 +1803,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## XII - Cleaning an saving the master catalogue"
+    "## XII - Cleaning and saving the master catalogue"
    ]
   },
   {
