work on CDFS-SWIRE - decided to not produce MOC of star mask

--- a/dmu1/dmu1_ml_CDFS-SWIRE/master_catalogue_CDFS-SWIRE.ipynb
+++ b/dmu1/dmu1_ml_CDFS-SWIRE/master_catalogue_CDFS-SWIRE.ipynb
@@ -478,7 +478,20 @@
     "fireworks_epoch = 2008 #Paper is from 2008 - Input surveys will have individual epochs\n",
     "fireworks_moc = MOC(filename=\"../../dmu0/dmu0_Fireworks/data/fireworks_MOC.fits\")\n",
     "\n",
-    "#Add flux and aperture magnitudes"
+    "\n",
+    "# Add flux and band-flag columns\n",
+    "for col in fireworks.colnames:\n",
+    "    if col.startswith('m_'):\n",
+    "        \n",
+    "        errcol = \"merr{}\".format(col[1:])\n",
+    "        flux, error = utils.mag_to_flux(np.array(fireworks[col]), np.array(fireworks[errcol]))\n",
+    "\n",
+    "        # Fluxes are added in µJy\n",
+    "        fireworks.add_column(Column(flux * 1.e6, name=\"f{}\".format(col[1:])))\n",
+    "        fireworks.add_column(Column(error * 1.e6, name=\"f{}\".format(errcol[1:])))\n",
+    "        \n",
+    "        # Band-flag column\n",
+    "        fireworks.add_column(Column(np.zeros(len(panstarrs), dtype=bool), name=\"flag{}\".format(col[1:])))"
    ]
   },
   {
@@ -525,22 +538,36 @@
     "]\n",
     "\n",
     "combo = Table(fireworks.as_array(), names=[\n",
-    "    'combo_intid', 'combo_ra', 'combo_dec',\n",
-    "    'm_fireworks_R',    'e_Rmag',  \n",
-    "    'm_fireworks_Uj',   'e_Uj', \n",
-    "    'm_fireworks_Bj',   'e_Bj',\n",
-    "    'm_fireworks_Vj',   'e_Vj',\n",
-    "    'm_fireworks_us',   'e_us',\n",
-    "    'm_fireworks_gs',   'e_gs',\n",
-    "    'm_fireworks_rs',   'e_rs',\n",
-    "    'm_fireworks_Ub',   'e_Ub',\n",
-    "    'm_fireworks_Bb',   'e_Bb',\n",
-    "    'm_fireworks_Vb',   'e_Vb',\n",
-    "    'm_fireworks_S280', 'e_S280',\n",
-    "    'm_fireworks_S145', 'e_S145'\n",
+    "    'combo_intid', 'combo_ra', 'combo_dec', 'combo_stellarity'\n",
+    "    'm_combo_R',    'merr_combo_Rmag',  \n",
+    "    'm_combo_Uj',   'merr_combo_Uj', \n",
+    "    'm_combo_Bj',   'merr_combo_Bj',\n",
+    "    'm_combo_Vj',   'merr_combo_Vj',\n",
+    "    'm_combo_us',   'merr_combo_us',\n",
+    "    'm_combo_gs',   'merr_combo_gs',\n",
+    "    'm_combo_rs',   'merr_combo_rs',\n",
+    "    'm_combo_Ub',   'merr_combo_Ub',\n",
+    "    'm_combo_Bb',   'merr_combo_Bb',\n",
+    "    'm_combo_Vb',   'merr_combo_Vb',\n",
+    "    'm_combo_S280', 'merr_combo_S280',\n",
+    "    'm_combo_S145', 'merr_combo_S145'\n",
     "])\n",
     "combo_epoch = 2009 #table says e.g. 55962.33945\n",
-    "combo_moc = MOC(filename=\"../../dmu0/dmu0_COMBO-17/data/table3_MOC.fits\")"
+    "combo_moc = MOC(filename=\"../../dmu0/dmu0_COMBO-17/data/table3_MOC.fits\")\n",
+    "\n",
+    "# Add flux and band-flag columns\n",
+    "for col in combo.colnames:\n",
+    "    if col.startswith('m_'):\n",
+    "        \n",
+    "        errcol = \"merr{}\".format(col[1:])\n",
+    "        flux, error = utils.mag_to_flux(np.array(combo[col]), np.array(combo[errcol]))\n",
+    "\n",
+    "        # Fluxes are added in µJy\n",
+    "        combo.add_column(Column(flux * 1.e6, name=\"f{}\".format(col[1:])))\n",
+    "        combo.add_column(Column(error * 1.e6, name=\"f{}\".format(errcol[1:])))\n",
+    "        \n",
+    "        # Band-flag column\n",
+    "        combo.add_column(Column(np.zeros(len(combo), dtype=bool), name=\"flag{}\".format(col[1:])))"
    ]
   },
   {
